[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Scenes/Gui/Themes/MenusTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/scripts/Gui/OpeningScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRight.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRightPressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRightDisabled.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/arrowRightHover.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 75
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="OpeningScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -512.0
margin_right = 300.0
margin_bottom = 512.0
theme = ExtResource( 2 )
text = "Korban Shop





"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisclaimerTitle" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -512.0
margin_right = 300.0
margin_bottom = 512.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Disclaimer





"
align = 1
valign = 1

[node name="Explanation" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -512.0
margin_right = 300.0
margin_bottom = 512.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "While this game is educational, it does not include all korbanot brought in the times of the Holy Temple.

"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="SkipButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -132.0
margin_top = -159.0
margin_right = -32.0
margin_bottom = -58.9999
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
